1) Change PyUtil On branch local Changes to be committed:   (use "git reset HEAD <file>..." to unstage)
    modified:   .gitmodules
    deleted:    py_util
    new file:   pyutil
    modified:   src/config/options.py
    modified:   src/util/__init__.py
    modified:   src/www/action/base.py
    modified:   src/www/action/hello.py

Submodule changes to be committed:

* py_util 86fea53...0000000:

* pyutil 0000000...5bf8a71 (1):
  > Initial commit

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "py_util"]
-	path = py_util
-	url = git@bitbucket.org:bufferx/py_util.git
+[submodule "pyutil"]
+	path = pyutil
+	url = git://github.com/bufferx/pyutil.git
