--- a/src/Makefile
+++ b/src/Makefile
@@ -5,8 +5,9 @@ all:
 clean:
 	cd ./config/ && make clean
 	cd ./domain/ && make clean
-	cd ./test/ && make clean
 	cd ./util/ && make clean
 	cd ./www/ && make clean
+	cd ./test/ && make clean
+	cd ./timer/ && make clean
 	rm -f *.pyc
 	rm -f *.pyo
