bugfix: can't cd to ./www/

--- a/twork/Makefile
+++ b/twork/Makefile
@@ -6,7 +6,7 @@ clean:
 	cd ./config/ && make clean
 	cd ./domain/ && make clean
 	cd ./util/ && make clean
-	cd ./www/ && make clean
+	cd ./web/ && make clean
 	cd ./test/ && make clean
 	cd ./timer/ && make clean
 	rm -f *.pyc
