1) add project fork script 2) update README.md

--- a/twork/Makefile
+++ b/twork/Makefile
@@ -3,11 +3,12 @@ all:
 
 .PHONY : clean
 clean:
+	cd ./bin/ && make clean
 	cd ./config/ && make clean
 	cd ./domain/ && make clean
-	cd ./util/ && make clean
-	cd ./web/ && make clean
 	cd ./test/ && make clean
 	cd ./timer/ && make clean
+	cd ./util/ && make clean
+	cd ./web/ && make clean
 	rm -f *.pyc
 	rm -f *.pyo
