Initialize logging from config file

--- a/conf/twork.conf
+++ b/conf/twork.conf
@@ -12,6 +12,7 @@ request_timeout=1.0
 #timer config
 timer_interval=300
 #deploy config
+log_config='conf/log.conf'
 log_root='./'
 #upstream service config
 #others config
