--- a/twork/Makefile
+++ b/twork/Makefile
@@ -3,10 +3,9 @@ all:
 
 .PHONY : clean
 clean:
-	cd ./domain/ && make clean
 	cd ./test/ && make clean
 	cd ./timer/ && make clean
-	cd ./util/ && make clean
+	cd ./utils/ && make clean
 	cd ./web/ && make clean
 	rm -f *.pyc
 	rm -f *.pyo
