--- a/twork/Makefile
+++ b/twork/Makefile
@@ -3,6 +3,7 @@ all:
 
 .PHONY : clean
 clean:
+	cd ./domain/ && make clean
 	cd ./test/ && make clean
 	cd ./timer/ && make clean
 	cd ./utils/ && make clean
