--- a/conf/log.conf
+++ b/conf/log.conf
@@ -1,20 +1,26 @@
 [loggers]
-keys=root,twork,biz
+keys=root,twork_gen,twork_access,biz
 
 [handlers]
-keys=consoleHandler,accessFileHandler,bizFileHandler
+keys=consoleHandler,generalFileHandler,accessFileHandler,bizFileHandler
 
 [formatters]
-keys=accessFormatter,bizFormatter
+keys=generalFormatter,accessFormatter,bizFormatter
 
 [logger_root]
 level=DEBUG
-handlers=consoleHandler,accessFileHandler
+handlers=consoleHandler,generalFileHandler
 
-[logger_twork]
+[logger_twork_gen]
 level=DEBUG
+handlers=consoleHandler,generalFileHandler
+qualname=twork.general
+propagate=0
+
+[logger_twork_access]
+level=INFO
 handlers=consoleHandler,accessFileHandler
-qualname=twork
+qualname=twork.access
 propagate=0
 
 [logger_biz]
@@ -26,14 +32,20 @@ propagate=0
 [handler_consoleHandler]
 class=StreamHandler
 level=DEBUG
-formatter=accessFormatter
+formatter=generalFormatter
 args=(sys.stdout,)
+
+[handler_generalFileHandler]
+class=logging.handlers.TimedRotatingFileHandler
+level=DEBUG
+formatter=generalFormatter
+args=('/tmp/twork/twork.log','midnight', 1, 0)
 
 [handler_accessFileHandler]
 class=logging.handlers.TimedRotatingFileHandler
 level=DEBUG
 formatter=accessFormatter
-args=('/tmp/twork/twork.access.log','midnight', 1, 0) 
+args=('/tmp/twork/twork.access.log','midnight', 1, 0)
 
 [handler_bizFileHandler]
 class=logging.handlers.TimedRotatingFileHandler
@@ -41,8 +53,12 @@ level=DEBUG
 formatter=bizFormatter
 args=('/tmp/twork/twork.biz.log','midnight', 1, 0) 
 
-[formatter_accessFormatter]
+[formatter_generalFormatter]
 format=%(asctime)s - %(process)d - %(name)s - %(levelname)1.1s - %(module)s.%(funcName)s:%(lineno)d - %(message)s
+datefmt=
+
+[formatter_accessFormatter]
+format=%(asctime)s - %(version)s - %(levelname)1.1s - %(process)d - %(status)d - %(method)s - %(uri)s - %(remoteip)s - %(rt)s
 datefmt=
 
 [formatter_bizFormatter]
