Redefine Makefile for twork_app

--- a/scaffold/twork_app/Makefile
+++ b/scaffold/twork_app/Makefile
@@ -5,15 +5,32 @@ clean:
 	rm -f `find . -type f -name '*.py[co]' `
 	rm -fr *.egg-info build dist
 
+build_egg: clean
+	python setup.py build_py -O2 bdist_egg --exclude-source-files
+
+install_egg: build_egg
+	easy_install dist/*.egg
+
+local_install: install_egg
+
 build: clean
-	python setup.py build_py bdist_egg --exclude-source-files
+	python setup.py build_py bdist_wheel
 
-install: build
-	python setup.py easy_install dist/*.egg
+install:
+	pip install dist/*.whl -U
 
-publish: clean
-	python setup.py build_py bdist_egg --exclude-source-files upload -r internal
-	python setup.py easy_install dist/*.egg
+install_whl: build install
+
+uninstall:
+	pip uninstall -y twork_app
+
+publish_whl: clean
+	python setup.py build_py bdist_wheel upload -r internal
+	pip install dist/*.whl -U
+
+publish:
+	python setup.py build_py -O2 bdist_egg --exclude-source-files upload -r internal
+	easy_install dist/*.egg
 
 release-major:
 	python setup.py release major
@@ -24,4 +41,4 @@ release-minor:
 release-patch:
 	python setup.py release patch
 
-.PHONY : all clean build install publish release-major release-minor release-patch
+.PHONY : all clean build_egg install_egg local_install build install install_whl uninstall publish publish_whl release-major release-minor release-patch
